--- a/package.json
+++ b/package.json
@@ -10,15 +10,9 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
-    "@react-native-async-storage/async-storage": "1.23.1",
     "expo": "~52.0.11",
-    "expo-media-library": "^17.0.3",
-    "expo-permissions": "^14.4.0",
     "expo-status-bar": "~2.0.0",
-    "moment": "^2.30.1",
-    "react": "18.3.1",
-    "react-native-config": "^1.5.3",
-    "react-native-fs": "^2.20.0"
+    "react": "18.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
